modified visualization for pricing trend

--- a/auction_eda/data_defining.ipynb
+++ b/auction_eda/data_defining.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "separate-progress",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "visible-tender",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "smooth-thunder",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "neither-worship",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 6,
    "id": "western-decade",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
        "4  Cartier wristwatch  7 day auction            100.0           1.344248  "
       ]
      },
-     "execution_count": 186,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 7,
    "id": "accomplished-apparatus",
    "metadata": {},
    "outputs": [],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 8,
    "id": "anonymous-mambo",
    "metadata": {},
    "outputs": [],
@@ -410,12 +410,13 @@
     "    auctions_df.loc[auction_id, 'closing_price'] = DataFrameDict[auction_id].price.max()\n",
     "    peak_price = DataFrameDict[auction_id].price.max()\n",
     "    auctions_df.loc[auction_id, 'won_bidder'] = DataFrameDict[auction_id][DataFrameDict[auction_id].bid==peak_price].bidder.to_list()[0]\n",
-    "    auctions_df.loc[auction_id, 'type'] = DataFrameDict[auction_id].auction_type.unique()"
+    "    auctions_df.loc[auction_id, 'type'] = DataFrameDict[auction_id].auction_type.unique()\n",
+    "    auctions_df.loc[auction_id, 'item'] = DataFrameDict[auction_id].item.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 9,
    "id": "fleet-female",
    "metadata": {},
    "outputs": [],
@@ -432,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 10,
    "id": "nearby-denmark",
    "metadata": {},
    "outputs": [
@@ -464,6 +465,7 @@
        "      <th>closing_price</th>\n",
        "      <th>won_bidder</th>\n",
        "      <th>type</th>\n",
+       "      <th>item</th>\n",
        "      <th>total_profit</th>\n",
        "      <th>profit_rate</th>\n",
        "      <th>profit_rate_log</th>\n",
@@ -479,6 +481,7 @@
        "      <td>1625.0</td>\n",
        "      <td>carloss8055</td>\n",
        "      <td>7 day auction</td>\n",
+       "      <td>Cartier wristwatch</td>\n",
        "      <td>1125.0</td>\n",
        "      <td>3.250000</td>\n",
        "      <td>1.178655</td>\n",
@@ -492,6 +495,7 @@
        "      <td>500.0</td>\n",
        "      <td>njbirdmom</td>\n",
        "      <td>7 day auction</td>\n",
+       "      <td>Cartier wristwatch</td>\n",
        "      <td>300.0</td>\n",
        "      <td>2.500000</td>\n",
        "      <td>0.916291</td>\n",
@@ -505,6 +509,7 @@
        "      <td>740.0</td>\n",
        "      <td>adammurry</td>\n",
        "      <td>7 day auction</td>\n",
+       "      <td>Cartier wristwatch</td>\n",
        "      <td>440.0</td>\n",
        "      <td>2.466667</td>\n",
        "      <td>0.902868</td>\n",
@@ -518,6 +523,7 @@
        "      <td>320.0</td>\n",
        "      <td>sylvesterii</td>\n",
        "      <td>7 day auction</td>\n",
+       "      <td>Cartier wristwatch</td>\n",
        "      <td>95.0</td>\n",
        "      <td>1.422222</td>\n",
        "      <td>0.352221</td>\n",
@@ -531,6 +537,7 @@
        "      <td>177.5</td>\n",
        "      <td>eli.flint@flightsafety.co</td>\n",
        "      <td>3 day auction</td>\n",
+       "      <td>Cartier wristwatch</td>\n",
        "      <td>78.5</td>\n",
        "      <td>1.792929</td>\n",
        "      <td>0.583851</td>\n",
@@ -547,22 +554,22 @@
        "3  1638844729          11           2.0          225.0          320.0   \n",
        "4  1638893549           5           4.0           99.0          177.5   \n",
        "\n",
-       "                  won_bidder           type  total_profit  profit_rate  \\\n",
-       "0                carloss8055  7 day auction        1125.0     3.250000   \n",
-       "1                  njbirdmom  7 day auction         300.0     2.500000   \n",
-       "2                  adammurry  7 day auction         440.0     2.466667   \n",
-       "3                sylvesterii  7 day auction          95.0     1.422222   \n",
-       "4  eli.flint@flightsafety.co  3 day auction          78.5     1.792929   \n",
+       "                  won_bidder           type                item  total_profit  \\\n",
+       "0                carloss8055  7 day auction  Cartier wristwatch        1125.0   \n",
+       "1                  njbirdmom  7 day auction  Cartier wristwatch         300.0   \n",
+       "2                  adammurry  7 day auction  Cartier wristwatch         440.0   \n",
+       "3                sylvesterii  7 day auction  Cartier wristwatch          95.0   \n",
+       "4  eli.flint@flightsafety.co  3 day auction  Cartier wristwatch          78.5   \n",
        "\n",
-       "   profit_rate_log  \n",
-       "0         1.178655  \n",
-       "1         0.916291  \n",
-       "2         0.902868  \n",
-       "3         0.352221  \n",
-       "4         0.583851  "
+       "   profit_rate  profit_rate_log  \n",
+       "0     3.250000         1.178655  \n",
+       "1     2.500000         0.916291  \n",
+       "2     2.466667         0.902868  \n",
+       "3     1.422222         0.352221  \n",
+       "4     1.792929         0.583851  "
       ]
      },
-     "execution_count": 207,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 12,
    "id": "frozen-taylor",
    "metadata": {},
    "outputs": [
@@ -2144,7 +2151,7 @@
        "butchballs               13            13               13                 13  "
       ]
      },
-     "execution_count": 208,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2163,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 23,
    "id": "drawn-tolerance",
    "metadata": {},
    "outputs": [],
